@@ -35,6 +35,8 @@ from BaseTemplet import BaseTemplet
 from SimpleBox import SimpleBox
 from CPSSkinsPermissions import ManageThemes
 
+from cpsskins_utils import is_ascii
+
 factory_type_information = (
     {'id': 'Portlet Box Templet',
      'description': ('_portletbox_templet_description_'),
@@ -176,7 +178,9 @@ class PortletBox(BaseTemplet, SimpleBox):
             tmtool = getToolByName(self, 'portal_themes')
             mcat = tmtool.getTranslationService(cat='default')
             if mcat is not None:
-                title = mcat(title).encode("ISO-8859-15", 'ignore')
+                title = mcat(title)
+                if isinstance(title, unicode):
+                    title = title.encode('ISO-8859-15', 'ignore')
         rendered_box = []
         if body:
             # add the box frame
