@@ -4,10 +4,19 @@ text = context.text
 i18n = context.i18n
 text_format = context.text_format
 
+def is_ascii(s):
+    try:
+        unicode(s, 'ascii')
+        return True
+    except UnicodeError:
+        return False
+
 if i18n:
     tmtool = context.portal_themes
     mcat = tmtool.getTranslationService(cat='default')
     if mcat is not None:
-        text = mcat(text).encode("ISO-8859-15", 'ignore')
+        text = mcat(text)
+        if isinstance(text, unicode):
+            text = text.encode('ISO-8859-15', 'ignore')
 
 return context.render_text_as(text, text_format)
