@@ -27,6 +27,8 @@ Bug fixes:
 - Buttons in the box title bar should not be displayed for anonymous users.
 - Pastable objects located in a non-existent themes triggered an AttributeError
   exception.
+- i18n of box titles: making sure that the string is in unicode before encoding
+  in ISO-8859-15
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - better caching of the base url.
